# nanorag

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
eval/: README.md  cases.yaml
rag_nano/: config.py  logging_setup.py  types.py
rag_nano/api/: app.py  models.py  routes.py
rag_nano/cli/: main.py
rag_nano/components/: embedding.py  metadata_extractor.py  protocols.py  reranker.py  retriever.py  structured_store.py  vector_store.py
rag_nano/core/: ingest.py  retrieval.py
rag_nano/eval/: history.py  metrics.py  runner.py
rag_nano/ingest/: chunker.py  credential_scan.py  loaders.py  runner.py  value_gate.py
scripts/: download_models.sh  seed_dev_corpus.sh
specs/001-minimal-rag-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/contract/: test_health_and_stats.py  test_retrieval_api.py
tests/integration/: test_agent_integration_chat.py  test_agent_integration_workflow.py  test_atomic_failure_rollback.py  test_concurrent_access.py  test_eval_pipeline.py  test_ingest_pipeline.py  test_retrieval_e2e.py  test_retrieval_provenance_invariant.py  test_swappability.py
tests/unit/: test_chunker.py  test_credential_scan.py  test_embedding.py  test_eval_composition_validator.py  test_eval_history.py  test_loaders.py  test_metadata_extractor.py  test_metrics.py  test_reranker.py  test_retriever.py  test_structured_store.py  test_value_gate.py  test_vector_store.py
(+8 files in other folders)
